--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,5 @@
+removed_sources:
+  bgpq3-0.1.12.tgz: 130479d4c08b555fa8cb0e54ab05092c94987884
+  bgpq3-0.1.18.tgz: 4563ee65d45c3925dc816d151ee1ad00c38a7d41
 sources:
-  "bgpq3-0.1.12.tgz": 130479d4c08b555fa8cb0e54ab05092c94987884
+  bgpq3-0.1.19.tgz: 41a2afaeffb12e43048ca8771c6cc6e6392e0da5
